--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </h1>
 
 <h2>
-    Top 3 de mis supereheroes favoritos:
+    Top 3 de mis supereheroes favoritos!
 </h2>
 
 <ol>
@@ -34,7 +34,7 @@
     <br>
     <br>
     <li>
-        
+
     </li>
 </ol>
 </body>
