--- a/Streambe_Tp1/Dificil.html
+++ b/Streambe_Tp1/Dificil.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>
+        Tarea Dificil
+    </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -24,6 +27,6 @@
     <p>
         Homelander asesina a un publico de gente.
     </p>
-    
+
 </body>
 </html>
